--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8,4 +8,17 @@ html, body {
 
 body {
     background-color: #26C6DA;
+    display: flex;
+    flex-direction: column;
+}
+
+.tile, .fullscreen {
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.active {
+    display: flex;
+    flex: 1 1 auto;
 }
